--- a/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
+++ b/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.3",
     "build": "^0.1.4",
     "jquery": "^3.7.1",
     "jquery-ui-dist": "^1.13.2",
