--- a/700.쉐도잉프로젝트/04.Pilot_PJ/02.구현소스/pilot-app/package.json
+++ b/700.쉐도잉프로젝트/04.Pilot_PJ/02.구현소스/pilot-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://zdzd3643.github.io/nick-pilot-pj/",
   "name": "pilot-app",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,7 @@
     "jquery-ui-touch-punch": "^0.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "swiper": "^11.0.5",
