--- a/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
+++ b/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://localhost:8080",
   "name": "dc-app",
   "version": "0.1.0",
   "private": true,
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
     "build": "^0.1.4",
+    "express": "^4.18.2",
     "jquery": "^3.7.1",
     "jquery-ui-dist": "^1.13.2",
     "jquery-ui-touch-punch": "^0.2.3",
