--- a/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
+++ b/700.쉐도잉프로젝트/03.DC_PJ/02.구현소스/dc-app/package.json
@@ -18,6 +18,7 @@
     "jquery": "^3.7.1",
     "jquery-ui-dist": "^1.13.2",
     "jquery-ui-touch-punch": "^0.2.3",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
